зробив постійні клієнти

--- a/index.html
+++ b/index.html
@@ -123,15 +123,27 @@
   
                 </ul>
             </section>
-            <section>
+            <section class="section">
                 <h2 class="title-h2">Постійні клієнти</h2>
-                <ul>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
+                <ul class="d-flex company">
+                    <li class="company-yago">
+                        <svg width="170px" height="92px"></svg>
+                    </li>
+                    <li class="company-taglinehear">
+                        <svg width="170px" height="92px"></svg>
+                    </li>
+                    <li class="company-com">
+                        <svg width="170px" height="92px"></svg>
+                    </li>
+                    <li class="company-foster">
+                        <svg width="170px" height="92px"></svg>
+                    </li>
+                    <li class="brand">
+                        <svg width="170px" height="92px"></svg>
+                    </li>
+                    <li class="tagline">
+                    <svg width="170px" height="92px"></svg>
+                    </li>
                 </ul>
             </section>
         </main>
