--- a/portfolio.html
+++ b/portfolio.html
@@ -35,9 +35,16 @@
             </ul>
             <ul class="contacts">
                 <li class="contacts-itame">
-                    <a class="mail d-flex" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                    <svg class="contacts-icone" width="16px" height="12px">
+                        <use href="./images/symbol-defs.svg#icon-mail"></use>
+                    </svg>
+                    <a class="mail d-flex" href="mailto:info@devstudio.com">info@devstudio.com
+                    </a>
                 </li>
                 <li class="contacts-itame">
+                    <svg class="contacts-icone" width="10px" height="16px">
+                        <use href="./images/symbol-defs.svg#icon-tell"></use>
+                    </svg>
                     <a class="tel d-flex" href="tell:+380961111111">+38 096 111 11 11</a>
                 </li>
             </ul>
@@ -58,39 +65,48 @@
         </nav>
         <section class="container section">
             <ul class="d-flex prtf-list">
-            <li class="nav-itame"> <img src="./images/mak.jpg" alt="тут зображиний ноутбук" width="370" height="294">
+            <li class="nav-itame"> 
+                <img src="./images/mak.jpg" alt="тут зображиний ноутбук" width="370" height="294">
                 <h2 class="li-title">Технокряк</h2>
                 <span class="li-span">Веб-сайт</span>
             </li>
-            <li class="nav-itame"> <img src="./images/bask.jpg" alt="тут зображені гравці баскетболу" width="370" height="294">
+            <li class="nav-itame"> 
+                <img src="./images/bask.jpg" alt="тут зображені гравці баскетболу" width="370" height="294">
                 <h2 class="li-title">Постер New Orlean vs Golden Star</h2>
                 <span class="li-span">Дизайн</span>
             </li>
-            <li class="nav-itame"> <img src="./images/fish.jpg" alt="тут зображений логотип ресторану" width="370" height="294">
+            <li class="nav-itame"> 
+                <img src="./images/fish.jpg" alt="тут зображений логотип ресторану" width="370" height="294">
                 <h2 class="li-title">Ресторан Seafood</h2>
                 <span class="li-span">Додаток</span>
             </li>
-            <li class="nav-itame"> <img src="./images/handsfre.jpg" alt="тут зображені наушники" width="370" height="294">
+            <li class="nav-itame"> 
+                <img src="./images/handsfre.jpg" alt="тут зображені наушники" width="370" height="294">
                 <h2 class="li-title">Проєкт Prime</h2>
                 <span class="li-span">Маркетинг</span>
             </li>
-            <li class="nav-itame"> <img src="./images/box.jpg" alt="тут зображені коробки" width="370" height="294">
+            <li class="nav-itame"> 
+                <img src="./images/box.jpg" alt="тут зображені коробки" width="370" height="294">
                 <h2 class="li-title">Проєкт Boxes</h2>
                 <span class="li-span">Додаток</span>
             </li>
-            <li class="nav-itame"> <img src="./images/imak.jpg" alt="тут зображений компютер" width="370" height="294">
+            <li class="nav-itame"> 
+                <img src="./images/imak.jpg" alt="тут зображений компютер" width="370" height="294">
                 <h2 class="li-title">Inspiration has no Borders</h2>
                 <span class="li-span">Веб-сайт</span>
             </li>
-            <li class="nav-itame"> <img src="./images/book.jpg" alt="тут зображена книга" width="370" height="294">
+            <li class="nav-itame"> 
+                <img src="./images/book.jpg" alt="тут зображена книга" width="370" height="294">
                 <h2 class="li-title">Видання Limited Edition</h2>
                 <span class="li-span">Дизайн</span>
             </li>
-            <li class="nav-itame"> <img src="./images/labeltag.jpg" alt="проек LAB" width="370" height="294">
+            <li class="nav-itame"> 
+                <img src="./images/labeltag.jpg" alt="проек LAB" width="370" height="294">
                  <h2 class="li-title">Проєкт LAB</h2>
                  <span class="li-span">Маркетинг</span>
             </li>
-            <li class="nav-itame"> <img src="./images/makbook.jpg" alt="тут зображений ноутбук" width="370" height="294">
+            <li class="nav-itame"> 
+                <img src="./images/makbook.jpg" alt="тут зображений ноутбук" width="370" height="294">
                 <h2 class="li-title">Growing Business</h2>
                 <span class="li-span">Додаток</span>
             </li>
@@ -98,24 +114,58 @@
         </section>
     </main>
 <footer class="footer">
+    <ul class="footer-container container">
+        <li class="footer-left">
+            <address class="">
+                <a class="web" href="./index.html">Web<span class="studio-bottom">Studio</span></a>
 
+                <ul class="footer-list">
+                    <li> <a class="adres-footer" href="">м. Київ, пр-т Лесі Українки, 26</a>
+                    </li>
+                    <li class="footer-list-itam">
+                        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+                    </li>
+                    <li class="footer-list-itam">
+                        <a href="tell:+380961111111">+38 096 111 11 11</a>
+                    </li>
+                </ul>
+            </address>
+        </li>
 
-    <address class="container">
-        <a class="web" href="./index.html">Web<span class="studio-bottom">Studio</span></a>
-
-        <ul class="footer-list">
-            <li> <a class="adres-footer" href="">м. Київ, пр-т Лесі Українки, 26</a>
-            </li>
-            <li class="footer-list-itam">
-                <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-            </li>
-            <li class="footer-list-itam">
-                <a href="tell:+380961111111">+38 096 111 11 11</a>
-            </li>
-        </ul>
-    </address>
-
-
+        <li class="">
+            <h3 class="text-footer">приєднуйтесь</h3>
+            <ul class="social">
+                <li class="social-item">
+                    <a class="link-footer" href="https://www.instagram.com/">
+                        <svg class="icon-footer" width="20px" height="20xp">
+                            <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="social-item">
+                    <a class="link-footer" href="https://twitter.com/?lang=uk">
+                        <svg class="icon-footer" width="20px" height="20px">
+                            <use href="./images/symbol-defs.svg#icon-twiter"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="social-item">
+                    <a class="link-footer" href="https://uk-ua.facebook.com/">
+                        <svg class="icon-footer" width="20px" height="20px">
+                            <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="social-item">
+                    <a class="link-footer" href="https://www.linkedin.com/">
+                        <svg class="icon-footer" width="20px" height="20px">
+                            <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                        </svg>
+                    </a>
+                </li>
+            </ul>
+        </li>
+        </div>
 </footer>
 </body>
     </html>
